--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h2 id="contract-read" class="text-xl text-zinc-100 mb-4">Contract Read</h2>
 
             <p class="text-zinc-400 mb-4">Making a read request for <span
-                    class="bg-zinc-700 text-zinc-200 py-1 px-1.5 rounded">getGreeting</span>.</p>
+                    class="bg-zinc-700 text-zinc-200 py-1 px-1.5 rounded">current</span>.</p>
 
             <form id="form-contract-read">
                 <div class="mb-2">
@@ -112,7 +112,7 @@
             <h2 id="contract-write" class="text-xl text-zinc-100 mb-4">Contract Write</h2>
 
             <p class="text-zinc-400 mb-4">Making a write request for <span
-                    class="bg-zinc-700 text-zinc-200 py-1 px-1.5 rounded">setGreeting</span>.</p>
+                    class="bg-zinc-700 text-zinc-200 py-1 px-1.5 rounded">add</span>.</p>
 
             <form id="form-contract-write">
                 <div class="mb-6">
