--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="p-8">
         <h1 class="text-2xl text-white mb-4">VanillaJS Wallet Connection</h1>
 
-        <p class="text-zinc-400 mb-4">Basic JavaScript demonstration to interact with a MetaMask wallet and a contract.
+        <p class="text-zinc-400 mb-4">Made in Yousung Company.
         </p>
 
         <div class="mb-8">
