--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 
             <h2 id="contract-write" class="text-xl text-zinc-100 mb-4">Contract Write</h2>
 
-            <p class="text-zinc-400 mb-4">Making a write request for <span
-                    class="bg-zinc-700 text-zinc-200 py-1 px-1.5 rounded">+1</span>.</p>
+            <p class="text-zinc-400 mb-4"> If you enter this button <span
+                    class="bg-zinc-700 text-zinc-200 py-1 px-1.5 rounded"> +1 read contract </span>.</p>
 
             <form id="form-contract-write">
                 <div class="mb-6">
