--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <h2 id="contract-read" class="text-xl text-zinc-100 mb-4">Contract Read</h2>
 
-            <p class="text-zinc-400 mb-4">Making a read request for <span
+            <p class="text-zinc-400 mb-4"> Values stored in this write : Status <span
                     class="bg-zinc-700 text-zinc-200 py-1 px-1.5 rounded">current</span>.</p>
 
             <form id="form-contract-read">
